minor edit - convert some methods to java11 counterparts for performance